# cleanly

./: .gitignore  pyproject.toml
cleanly/api/: server.py
cleanly/core/: cleaner.py
cleanly/io/: __init__.py  file_io.py
cleanly/llm/: parser.py
cleanly/tests/: test_cleaner.py  tests_parser.py
